added news section and added some more style

--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -7,7 +7,7 @@
 
 {# HERO – Fade in #}
 
-{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.intro %}
+{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.hero_lede show_breadcrumb=True hero_id="aktuellt-hero" %}
 
 {# CALLBACK-SEKTION – Scale-in animation #}
 <section class="py-16 bg-gradient-primary">
