--- a/core/templates/core/services_page.html
+++ b/core/templates/core/services_page.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {# HERO – Fade in + subtle parallax #}
-{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.intro %}
+{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.hero_lede show_breadcrumb=True hero_id="aktuellt-hero" %}
 
 
 {# SERVICES GRID – Scroll-triggered stagger #}
