--- a/team/templates/team/team_page.html
+++ b/team/templates/team/team_page.html
@@ -5,8 +5,7 @@
 {% block content %}
 
 <!-- Hero Section -->
-{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.intro %}
-
+{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.hero_lede show_breadcrumb=True hero_id="aktuellt-hero" %}
 <!-- Om oss-sektion (StreamField Content) -->
 {% if page.about_content %}
 <section class="py-16 bg-white">
